--- a/src/index.html
+++ b/src/index.html
@@ -6,26 +6,26 @@
 * Copyright (c) 2017-2023 creativeLabs Łukasz Holeczek
 * License: MIT
 -->
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="utf-8">
   <base href="./">
   <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport" />
-  <meta content="CoreUI Free Angular Admin Template" name="description" />
-  <meta content="Łukasz Holeczek" name="author" />
+  <meta content="Controla tus finanzas personales de manera fácil y efectiva con nuestro software. Realiza un seguimiento de tus gastos, ahorra dinero, planifica tus inversiones y mejora tu salud financiera. ¡Regístrate ahora y comienza a alcanzar tus objetivos financieros hoy mismo!" name="description" />
+  <meta content="José Carlos Rodríguez Díaz" name="author" />
   <meta
-    content="CoreUI,Bootstrap,Admin,Template,Free,Angular,Dashboard,Typescript"
+    content="finanzas, presupuestos, inversiones, control de gastos, salud financiera, planificación financiera, riesgos financieros, contabilidad"
     name="keyword"
   />
   <link href="assets/favicon.ico" rel="icon" type="image/x-icon">
-  <title>CoreUI Free Angular Admin Template</title>
+  <title>Salud financiera</title>
 </head>
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <app-root>
     <div class="fade show" style="text-align: center; padding-top: calc(100vh / 2); height: 100vh">
       <i class="spinner-grow spinner-grow-sm"></i>
-      <span class="m-1">Loading...</span>
+      <span class="m-1">Cargando...</span>
     </div>
   </app-root>
 </body>
